# plugins_oauth

./: .bazelrc  .gitignore  .travis.yml  BUCK  BUILD  MODULE.bazel  README.md  VERSION  WORKSPACE  bazel-gerrit-oauth-provider  external_plugin_deps.MODULE.bazel  external_plugin_deps.bzl  external_plugin_deps.lock.json  groups  maven_install.json  oauth_plugin_deps.lock.json  oauth_third_party_runtime_jars.allowlist.txt  project.config  zuul.yaml
lib/gerrit/: BUCK
src/main/java/com/googlesource/gerrit/plugins/oauth/: AirVantageOAuthService.java  Auth0Api.java  Auth0OAuthService.java  AuthentikApi.java  AuthentikOAuthService.java  AzureActiveDirectory.java  AzureActiveDirectoryService.java  AzureOAuthServiceModule.java  BitbucketOAuthService.java  CasApi.java  CasOAuthService.java  CognitoApi.java  CognitoOAuthService.java  DefaultOAuthModule.java  DexApi.java  DexOAuthService.java  FacebookOAuthService.java  GitHub2Api.java  GitHubOAuthService.java  GitLabApi.java  GitLabOAuthService.java  Google2Api.java  GoogleOAuthService.java  GroupCache.java  HttpModule.java  InitOAuth.java  JsonUtil.java  KeycloakOAuthService.java  LemonLDAPApi.java  LemonLDAPOAuthService.java  Module.java  OAuth20ServiceFactory.java  OAuth20ServiceImpl.java  OAuth2AccessTokenJsonExtractor.java  OAuthExternalIdCreator.java  OAuthPluginConfigFactory.java  OAuthServiceModule.java  OAuthServiceProviderConfig.java  OAuthServiceProviderExternalIdScheme.java  OAuthUserInfoWithGroups.java  (+14 more)
src/main/java/com/googlesource/gerrit/plugins/oauth/airvantage/: AirVantageApi.java  AirVantageOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/auth0/: Auth0Api.java  Auth0OAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/authentik/: AuthentikApi.java  AuthentikOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/azure/: AzureActiveDirectoryService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/bitbucket/: BitbucketApi.java  BitbucketOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/cas/: CasApi.java  CasOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/cognito/: CognitoApi.java  CognitoOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/dex/: DexApi.java  DexOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/discovery/: DiscoveryApi.java  DiscoveryOAuthService.java  DiscoveryOpenIdConnect.java
src/main/java/com/googlesource/gerrit/plugins/oauth/facebook/: Facebook2Api.java  FacebookOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/github/: GitHub2Api.java  GitHubOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/gitlab/: GitLabApi.java  GitLabOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/google/: Google2Api.java  GoogleOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/keycloak/: KeycloakApi.java  KeycloakGroupBackend.java  KeycloakGroupCache.java  KeycloakModule.java  KeycloakOAuthLoginProvider.java  KeycloakOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/lemon/: LemonLDAPApi.java  LemonLDAPOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/phabricator/: PhabricatorApi.java  PhabricatorOAuthService.java
src/main/java/com/googlesource/gerrit/plugins/oauth/sap/: SAPIasApi.java  SAPIasModule.java  SAPIasOAuthLoginProvider.java  SAPIasOAuthService.java  SAPIasServiceModule.java  SAPIasTokenValidatorProvider.java
src/main/java/com/googlesource/gerrit/plugins/oauth/tuleap/: TuleapApi.java  TuleapOAuthService.java
src/main/resources/Documentation/: build.md  config.md
src/test/java/com/googlesource/gerrit/plugins/oauth/: Auth0ApiTest.java  CasApiTest.java  CognitoApiTest.java  CognitoOAuthServiceTest.java  DexApiTest.java  GithubApiUrlTest.java  JsonUtilTest.java  MicrosoftAzureActiveDirectory20ApiTest.java  OAuth2AccessTokenJsonExtractorTest.java  Office365ApiTest.java  SovereignMicrosoftAzureApiTest.java  TuleapApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/airvantage/: AirVantageApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/auth0/: Auth0ApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/azure/: MicrosoftAzureActiveDirectory20ApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/bitbucket/: BitbucketApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/cas/: CasApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/cognito/: CognitoApiTest.java  CognitoOAuthServiceTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/dex/: DexApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/discovery/: DiscoveryApiTest.java  DiscoveryOAuthServiceTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/facebook/: Facebook2ApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/github/: GitHub2ApiTest.java  GithubApiUrlTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/gitlab/: GitLabApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/google/: Google2ApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/keycloak/: KeycloakApiTest.java  KeycloakOAuthLoginProviderTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/phabricator/: PhabricatorApiTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/sap/: SAPApiTest.java  SAPIasOAuthServiceTest.java  SAPOAuthServiceTest.java
src/test/java/com/googlesource/gerrit/plugins/oauth/tuleap/: TuleapApiTest.java
tools/: BUILD
tools/bzl/: maven_jar.bzl  plugin.bzl
tools/eclipse/: BUILD  project.sh
