module(name = "gerrit-plugin-oauth")

bazel_dep(name = "rules_jvm_external", version = "6.9")

bazel_dep(name = "com_googlesource_gerrit_bazlets")

# TODO(Thomas): To make standalone builds work, we can't use the local_path_override
# like below, which works for in-tree builds. It would be better to use a
# git_override. For that, we would first have to submit I311c980e5bf970e7b5f90405da3ea61028c129d0
# in the bazlets project.
#
# git_override(
#     module_name = "com_googlesource_gerrit_bazlets",
#     remote = "https://gerrit.googlesource.com/bazlets",
#     commit = "40fe63dc04b90d4a60b931b41da0abda321e73c7",
# )
local_path_override(
    module_name = "com_googlesource_gerrit_bazlets",
    path = "/Users/d073103/working_dir/bazlets",
)

gerrit_api_version = use_repo_rule("@com_googlesource_gerrit_bazlets//:gerrit_api_version.bzl", "gerrit_api_version")
gerrit_api_version(
    name = "gerrit_api_version",
    visibility = ["//visibility:public"],
)

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

JACKSON_VERS = "2.10.2"
SCRIBEJAVA_VERS = "6.9.0"
SAP_SECURITY_VERS = "3.6.0"

maven.install(
    name = "maven",
    artifacts = [
        "com.fasterxml.jackson.core:jackson-annotations:" + JACKSON_VERS,
        "com.fasterxml.jackson.core:jackson-core:" + JACKSON_VERS,
        "com.fasterxml.jackson.core:jackson-databind:" + JACKSON_VERS,
        "com.github.scribejava:scribejava-apis:" + SCRIBEJAVA_VERS,
        "com.github.scribejava:scribejava-core:" + SCRIBEJAVA_VERS,
        "com.sap.cloud.security:env:" + SAP_SECURITY_VERS,
        "com.sap.cloud.security:java-api:" + SAP_SECURITY_VERS,
        "com.sap.cloud.security:java-security:" + SAP_SECURITY_VERS,
        "com.sap.cloud.security.xsuaa:token-client:" + SAP_SECURITY_VERS,
        "commons-codec:commons-codec:1.15",
        "org.json:json:20250517",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://gerrit-maven.storage.googleapis.com",
    ],
    duplicate_version_warning = "error",
    fail_on_missing_checksum = True,
    fetch_sources = True,
    strict_visibility = True,
    version_conflict_policy = "pinned",
)

use_repo(maven, "maven")
